[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = 'abort'
overflow-checks = true

[dependencies]
cosmwasm-std = "1.2.5"
cw-storage-plus = "1.0.1"
cw-controllers = "1.0.1"
cw-merkle-tree = "0.3.0"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
#serde_json = "1.0.96"
thiserror = "1.0.40"

base64 = "0.13.0"

osmosis-std = "0.15.2"

circuits = { path = "../circuits" }

ark-ff = { version = "^0.4.0", default-features = false }
ark-r1cs-std = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
ark-relations = { version = "^0.4.0", default-features = false }
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = ["crh", "sponge"] }
ark-bn254 = { version = "^0.4.0", default-features = false, features = ["curve"] }
ark-groth16 = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false }

[dev-dependencies]
cw-multi-test = "0.16.4"

lazy_static = "1.4.0"
rand = "0.8.5"

ark-std = { version = "^0.4.0", default-features = false, features = ["parallel", "print-trace"] }
ark-ff = { version = "^0.4.0", default-features = false, features = ["parallel"] }
ark-groth16 = { version = "^0.4.0", default-features = false, features = ["parallel"] }
