[package]
name = "keygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = ["parallel", "crh", "sponge"] }
ark-bn254 = { version = "^0.4.0", default-features = false, features = ["curve"] }
ark-groth16 = { version = "^0.4.0", default-features = false, features = ["parallel"] }
ark-serialize = { version = "^0.4.0", default-features = false }

circuits = { path = "../circuits" }

rand = "0.8.5"
base64 = "0.13.0"
