[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"] 

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
arkworks-mimc = { version = "0.3.0", default-features = false, features = ["r1cs", "mimc-7-91-bn254"] }

circuits = { path = "../circuits" }

serde_json = "1.0.96"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.86"
wasm-bindgen-rayon = "1.0.3"
console_error_panic_hook = "0.1.7"
hex = "0.4.3"
