[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"] 

[dependencies]
ark-ff = { version = "^0.4.0", default-features = false }
ark-r1cs-std = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
ark-relations = { version = "^0.4.0", default-features = false }
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = ["crh", "sponge"] }
ark-bn254 = { version = "^0.4.0", default-features = false, features = ["curve"] }
ark-groth16 = { version = "^0.4.0", default-features = false}
ark-serialize = { version = "^0.4.0", default-features = false }

circuits = { path = "../circuits" }

osmosis-std = "0.15.2"

rand = "0.8.5"
getrandom = { version = "0.2.9", features = ["js"] }

serde = { version = "1.0.163", default-features = false, features = ["derive"] }
serde_json = "1.0.96"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.86"
#wasm-bindgen-rayon = "1.0.3"
console_error_panic_hook = "0.1.7"
base64 = "0.13.0"
